gcc/testsuite/rust/rustc/ui/error-codes/E0452_dg.rs
#![allow(foo = "")] // { dg-error ".E0452." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
// { dg-error "" "" { target *-*-* } .-4 }
fn main() {
}

